[package]
name = "hellheim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = { version = "1", features = ["full"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
http = "*"
tokio-util = "*"
